# Opportunistic-Trading-System-Algo

./: CMakeLists.txt  README.txt  output_file.txt
mergeApp/: CMakeLists.txt  main.cpp
mergeLib/: CMakeLists.txt
mergeLib/include/mergefiles/: mergefiles.h
mergeLib/src/: mergefiles.cpp
test/: CMakeLists.txt  test.cpp
